--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "assemblyai": "^4.14.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dom-to-image": "^2.6.0",
     "googleapis": "^153.0.0",
     "lucide-react": "^0.525.0",
